refactor: change returned type